--- a/src/app/pages/novo-destino/novo-destino.component.html
+++ b/src/app/pages/novo-destino/novo-destino.component.html
@@ -1,7 +1,7 @@
 <main class="destinos-frame">
   <mat-card>
     <mat-card-header>
-      <mat-card-title>OurTrip - Novo Destinos</mat-card-title>
+      <mat-card-title>OurTrip - Novo Destino</mat-card-title>
     </mat-card-header>
     <form [formGroup]="form" (ngSubmit)="handleSubmit()">
       <mat-card-content>
