--- a/src/app/pages/destinos/destinos.component.scss
+++ b/src/app/pages/destinos/destinos.component.scss
@@ -1,4 +1,3 @@
-
 mat-card {
   margin: 50px auto auto auto;
   width: 800px;
@@ -12,11 +11,38 @@ mat-card {
       color: #F9A826;
     }
   }
+
   mat-card-content {
     border-radius: 8px;
     background-color: #f9a826b0 !important;
     height: 667px;
     overflow: overlay;
     scrollbar-width: none;
+  }
+
+  mat-card-actions {
+    display: flex;
+    justify-content: flex-end;
+    gap: 5px;
+
+    .btn {
+      display: flex;
+      justify-content: space-evenly;
+      flex-direction: row-reverse;
+      align-items: center;
+      color: #fff;
+      background-color: #F9A826;
+      border-radius: 15px;
+      width: 166px;
+      height: 40px;
+      font-family: "Quicksand", serif;
+      font-weight: 700;
+      font-size: 15px;
+
+      mat-icon {
+        font-weight: 700;
+        font-size: 20px;
+      }
+    }
   }
 }
