--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -31,7 +31,7 @@
           <mat-card-actions>
             <button mat-raised-button type="submit" class="btn-login">Login <mat-icon>keyboard_arrow_right</mat-icon></button>
             <span>Ou</span>
-            <button mat-raised-button (click)="redirectToSignUp()" class="btn-cadastrar">Cadastrar</button>
+            <button mat-raised-button type="button" (click)="redirectToSignUp()" class="btn-cadastrar">Cadastrar</button>
           </mat-card-actions>
         </form>
       </mat-card>
